Fix spacing after calendar chart.

--- a/_sass/pages/_garden.scss
+++ b/_sass/pages/_garden.scss
@@ -13,7 +13,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     position: relative;
-    top: -24px;
+    margin-top: -24px;
 
     .google-visualization-tooltip {
       border: none;
